--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-sitemap": "babel-node ./src/sitemap/sitemap-generator.js"
+    "generate-sitemap": "babel-node ./src/sitemap/sitemap-generator.js",
+    "generate-robots": "node ./src/scripts/robot-txt-generator.js"
   },
   "dependencies": {
     "@babel/preset-env": "^7.25.4",
